[project]
name = "graphrag-got"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-neo4j>=0.10.0",
    "neo4j>=6.2.0",
    "networkx>=3.6.1",
    "python-dotenv>=1.2.2",
]
